Fix issue with services dropdown menu on mobile devices and update styles

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -6,11 +6,10 @@
 .NavLink {
   padding: 8px 5px;
   font-weight: 500;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .Navdropdown {
-  padding: 1px;
   font-weight: 500;
 }
 
@@ -21,4 +20,15 @@
 .Active {
   color: #797742;
   font-weight: 700;
+}
+
+.flecGrow {
+  flex-grow: 0;
+}
+
+/*Responsive*/
+@media (max-width: 767.9px) {
+  .Navdropdown {
+    padding-left: 5px;
+  }
 }
